2014-10-27  Chris Dumez  <cdumez@apple.com>

        Use separate HashMaps for common and uncommon headers in HTTPHeaderMap
        https://bugs.webkit.org/show_bug.cgi?id=138079

        Reviewed by Anders Carlsson.

        Add HashTraits for C++11 strong enum types. Using integer HashTraits for
        strong enums would be inconvenient as it would require casting between
        integer and strong enum types.

        * wtf/HashTraits.h:
        (WTF::StrongEnumHashTraits::emptyValue):
        (WTF::StrongEnumHashTraits::constructDeletedValue):
        (WTF::StrongEnumHashTraits::isDeletedValue):

2014-10-25  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: timelines should not count time elapsed while paused in the debugger
        https://bugs.webkit.org/show_bug.cgi?id=136351

        Unreviewed, follow-up fix after r175203. The debugger agent should not assume
        that the inspector environment's stopwatch has already been started.

        * wtf/Stopwatch.h:
        (WTF::Stopwatch::isActive): Added. Allow peeking at the stopwatch state.

2014-10-18  Brian J. Burg  <burg@cs.washington.edu>

        Web Inspector: timelines should not count time elapsed while paused in the debugger
        https://bugs.webkit.org/show_bug.cgi?id=136351

        Reviewed by Timothy Hatcher.

        * WTF.vcxproj/WTF.vcxproj:
        * WTF.vcxproj/WTF.vcxproj.filters:
        * WTF.xcodeproj/project.pbxproj:
        * wtf/CMakeLists.txt:
        * wtf/Stopwatch.h: Added. This implements a refcounted monotonic stopwatch.
        (WTF::Stopwatch::create):
        (WTF::Stopwatch::Stopwatch):
        (WTF::Stopwatch::reset):
        (WTF::Stopwatch::start):
        (WTF::Stopwatch::stop):
        (WTF::Stopwatch::elapsedTime):

2014-10-23  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: Provide a way to have alternate inspector agents
        https://bugs.webkit.org/show_bug.cgi?id=137901

        Reviewed by Brian Burg.
